[package]
name = "toy_ml"
version = "0.1.0"
edition = "2021"
description = "toy_ml is designed to be a “Hello World” for machine learning enthusiasts looking to get started with Rust."
authors = ["Palash Kanti Kundu"]
readme = "README.md"
repository = "https://github.com/Palash90/toy_ml"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
